--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
