--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-paper": "^4.12.1",
     "react-native-paper-dates": "^0.18.12",
     "react-native-reanimated": "^2.8.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
