--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.1",
+    "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
@@ -27,7 +28,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-web": "0.17.7",
-    "@expo/webpack-config": "^0.17.2"
+    "recyclerlistview": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
