--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "@react-navigation/stack": "^6.2.1",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "expo": "~47.0.0",
-    "expo-font": "^11.4.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "expo-font": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^4.12.1",
     "react-native-paper-dates": "^0.18.12",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-web": "0.17.7",
-    "@expo/webpack-config": "^0.17.2"
+    "react-native-reanimated": "~2.12.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
